10/5/17
 - beamOn() is now part of grun, which also have a gDynamic map and will take care of plugin initialization for each run
 - GDynamic does not need to be a shared_ptr
 - added event action
 - both interactive and batch mode use GRuns:: processEvents() to activate beamOn()
 - using map of gDynamic pointers
 - using flowMessage properly in GSensitive constructor
 - ConstructSD is thread local so using G4cerr
 - setting GEventAction in userAction

9/20/17
 - GDetectorConstruction inherits from gFlowMessage
 - GSensitiveDetector inherits from gFlowMessage
 - GActionInitialization inherits from gFlowMessage
 - marking flowMessage as const, making flowCounter mutable

9/19/17
 - added gFlowMessage class to log gemc flow
 - moved detector construction to main
 - moved digitization to main
 - implementing some code conventions:

   - "global" in variable names corresponds to variables shared among threads.
   - "tlocal" in variable names corresponds to variables locals in threads.

7/17/17
 - moved gtouchable out of gemc

7/12/17
 - added gHit, GSensitiveDetector classes
 - associating gvolume with GSensitiveDetector
 - added default softwareVersion handling
 - added skipProcessHit to GSensitiveDetector
 - GVolume* added to GSensitiveDetector constructor
 - GTouchable constructor


7/11/17
 - starting gtouchable

7/10/17
 - less log message for factory, define verbosity better and screen log
 - add option g4command to execute g4 commands from gcard / command line

7/7/17
 - filename case more consistent
 - added QStackedWidget for right content
 - ladies and gentlemen we have a beam


6/29/17
 - added MasterGeant4.err error log

6/1/17
 - adding goptions to various classes. added gsetup with example.

5/12/17
 - managing G4cout in Master, Worker thread and gemc sequential mode

5/11/17
 - added detector construction template
 - scons path was wrong. fixed in the main SConstruct with Dir directive
 - added generator template