@@ -1,6 +1,6 @@
 current command to verify run:
 
-./gemc -gui=0 -n=1000 -runWeightsFile=runWeights.txt  test.gcard -grunv=3 -gsensitivityv=3 -gflowv=3
+./gemc -gui=0 -n=100 -runWeightsFile=runWeights.txt  test.gcard -grunv=3 -gsensitivityv=3 -gflowv=3
 
 
 need a map<gsensitiveDetectors> in the the GDetector scope so we can load the gDynamic pointer with the plugin.
