@@ -30,7 +30,6 @@ QCoreApplication* createQtApplication(int &argc, char *argv[], bool gui);
 // loading a qt resource
 int loadQResource(char* argv[], string resourceName);
 
-
 // retrieve and define batch commands
 // these include possible options/gcard commands
 vector<string> batchCommands(GOptions* gopt);
@@ -44,8 +43,14 @@ vector<string> interactiveCommands(GOptions* gopt);
 // - gui (if needed)
 void applyInitialUIManagerCommands(GOptions* gopt);
 
+// return number of cores from options. If 0 or none given,
+// returns max number of available cores
 int getNumberOfThreads(GOptions* gopt);
 
+// initialize run manager
 void initGemcG4RunManager(G4MTRunManager *grm);
+
+// loads plugins from sensitive map <names, paths>
+map<string, GDynamic*> *loadGPlugins(GOptions* gopt, map<string, string> sensD);
 
 #endif
